# complexity-aware-fine-tuning

./: .gitignore  README.md  pyproject.toml
data/data_splits/: README.md
data/data_splits/masj/: test_combined_masj.tsv  (+9 more)
docs/: POLARIS datasets  research_diary.md
src/analysis/: analysis_mmlu_entropy_single_token.ipynb  analysis_mmlu_entropy_single_token_mistral_24b.ipynb  analysis_mmlu_entropy_single_token_mistral_7b.ipynb  analysis_mmlu_entropy_single_token_phi4.ipynb  analysis_mmlu_entropy_single_token_qwen_3b.ipynb  analysis_mmlu_entropy_single_token_w_fallback_if_unknown_mistral_24b.ipynb  analysis_mmlu_entropy_single_token_w_fallback_if_unknown_qwen_3b.ipynb  analysis_mmlu_masj_education_levels.ipynb
src/cot_fine-tuning/: Qwen_train_test_CoT_otlad (1).py
src/experiments/: masj_education_level_mmlu.py  single_token_entropy_mmlu_mistral_24b.py  single_token_entropy_mmlu_mistral_7b.py  single_token_entropy_mmlu_phi4.py  single_token_entropy_mmlu_qwen_3b.py  single_token_entropy_w_fallback_if_unknown_mmlu_alternative_prompt_phi4.py  single_token_entropy_w_fallback_if_unknown_mmlu_alternative_prompt_qwen_3b.py  single_token_entropy_w_fallback_if_unknown_mmlu_mistral_24b.py  single_token_entropy_w_fallback_if_unknown_mmlu_phi4.py  single_token_entropy_w_fallback_if_unknown_mmlu_qwen_3b.py
src/postprocessing/: prepare_chain_of_thought_entropy.ipynb  prepare_masj_education_level.ipynb  prepare_masj_reasoning_score.ipynb  prepare_reasoning_entropy.ipynb
src/thinking_and_entropy/: MMLUQwen_Qwen3-8B_labeling.ipynb  MMLU_DeepSeek_R1_Distill_Qwen_7B_labeling.ipynb
(+171 files in other folders)
