[project]
name = "reasoning-fine-tune"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate==1.3.0",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "torch==2.6.0",
    "torchao==0.8.0",
    "transformers==4.48.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "huggingface-hub[cli]>=0.29.3",
]
